Centered navbar brand and changed to Huawei color

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,10 @@
 <body>
   <div class="app">
     <header>
-      <nav class="navbar navbar-dark bg-primary">
-        <span class="navbar-brand mb-0 h1">Todo App</span>
+      <nav class="navbar navbar-dark" style="background-color: #c7000b;">
+	<div class="container">
+          <span class="navbar-brand mx-auto h1">Todo App</span>
+	</div>
       </nav>
     </header>
     <div class="container">
